Revision history for Perl extension WWW-DojinEvent

{{$NEXT}}

0.08 2013-07-19T17:01:43Z
    - add sample script
    - change module interface
    - reduce dependencies
    - update document

0.07 2013-06-03T04:38:57Z
    - [Creation] fixed extract invalid circle-url #5

0.06 2013-06-02T12:27:45Z
    - fix invalid field

0.05 2013-06-01T07:36:05Z
    - show warning when invalid $url

0.04 2013-06-01T04:46:35Z

    - add fields method: scraped field name list

0.03 2013-05-31T18:00:05Z

    - add Creation.pm #3

0.02

    - abstraction and replace to Web::Scraper #1

0.01

    - original version
