@@ -3,7 +3,7 @@ use Test::More;
 
 use_ok $_ for qw(
     WWW::DojinEvent
-    WWW::DojinEvent::Base
+    WWW::DojinEvent::Scraper
     WWW::DojinEvent::COMIC1
     WWW::DojinEvent::Reitaisai
 );
